Medium severity issue pass